--- a/web/index.html
+++ b/web/index.html
@@ -18,21 +18,54 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Aplikasi absensi berbasis lokasi dan kamera.">
 
+  <!-- Permission metadata (standard) -->
+  <meta name="permissions-policy" content="geolocation=(), camera=()">
+  
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="ujikom">
+  <meta name="apple-mobile-web-app-title" content="Aplikasi Absensi">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>ujikom</title>
+  <title>Aplikasi Absensi</title>
   <link rel="manifest" href="manifest.json">
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 <body>
+  <!-- Bootstrap script reference -->
   <script src="flutter_bootstrap.js" async></script>
+  
+  <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            // Check if browser supports camera access
+            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+              console.log("Browser supports camera access");
+            } else {
+              console.error("Browser does not support camera access");
+            }
+            appRunner.runApp();
+          });
+        }
+      });
+    });
+  </script>
 </body>
 </html>
